Archive2/85/6c4238243ad836/output
main.cpp: In function ‘int main()’:
main.cpp:13:5: error: ‘C::C(C&&)’ is private
     C( C&& ) = delete;
     ^
main.cpp:18:9: error: within this context
  C c1 = 10;
         ^
main.cpp:18:9: error: use of deleted function ‘C::C(C&&)’
main.cpp:13:5: error: declared here
     C( C&& ) = delete;
     ^
